--- a/src/app/post-list/post-list.component.html
+++ b/src/app/post-list/post-list.component.html
@@ -1,7 +1,4 @@
 <app-post-list-item 
 	*ngFor="let post of posts"
-	[title]="post.title"
-	[content]="post.content"
-	[loveIts]="post.loveIts"
-	[created_at]="post.createdAt"
+	[post]="post"
 ></app-post-list-item>
